--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,1 +1,16 @@
-/* this will serve up our css for index.html */
+body {
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.header {
+    margin-top: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 2rem;
+    background-color: #00c0e7;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 3rem;
+    text-align: center;
+}
