--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 .header {
-    margin-top: 0;
+    margin: 0;
     padding-top: 0.5rem;
     padding-bottom: 2rem;
     background-color: #00c0e7;
@@ -13,4 +13,16 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 3rem;
     text-align: center;
+}
+
+.subheader {
+    margin-top: 0;
+    padding-bottom: 0.75rem;
+    padding-top: 1.5rem;
+    background-color: #87cfdd;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2rem;
+    text-align: center;
+    font-weight: normal;
 }
