Feat: Add version to HTML page
feat: added html version placeholder
-We will be adding our version to the bottom right of the page. Here I am hard coding the version in, this will dynamically be represented eventually. We are surrounding this in a span, and currently inside an h2 tag

style: adding position to version
we are going to position the version in the bottom right of our page. I implemented it on the span for right now, I also added some padding on the right so it did not touch the corner of the browser too heavy

refactor: swap span / h2 position

style: target .app-version to position version markup

refactor: span encapsulation fixed

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -26,3 +26,10 @@ body {
     text-align: center;
     font-weight: normal;
 }
+
+.app-version {
+    position:absolute;
+    bottom:0;
+    right:0;
+    padding-right: 1.5rem;
+}
