Feat: Add Tic-Tac-Toe grid
Added a parent div with a class of "game-grid" to contain 9 child container divs
with classes of "grid-cell" and filled each grid cell with either an X or an O.
Styled the game-grid class to use CSS grid and created a three column, centered layout.

FSA2021-62

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,7 @@
+:root {
+    --cell-size: 20vmin;
+}
+
 body {
     margin-top: 0;
     margin-left: 0;
@@ -27,9 +31,39 @@ body {
     font-weight: normal;
 }
 
+.game-grid {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-content: center;
+ }
+
+ .grid-cell {
+    border: 1px solid #aaa;
+    height: var(--cell-size);
+    width: var(--cell-size);
+    text-align: center;
+    line-height: var(--cell-size);
+  }
+
 .app-version {
     position:absolute;
     bottom:0;
     right:0;
     padding-right: 1.5rem;
+}
+
+.util-no-top-border {
+    border-top: 0px;
+}
+
+.util-no-bottom-border {
+    border-bottom: 0px;
+}
+
+.util-no-right-border {
+    border-right: 0px;
+}
+
+.util-no-left-border {
+    border-left: 0px;
 }
