--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -45,25 +45,25 @@ body {
     line-height: var(--cell-size);
   }
 
+  .grid-cell:nth-child(n+1):nth-child(-n+3)  {
+    border-top: 0;
+  }
+
+  .grid-cell:nth-child(3n) {
+    border-right: 0;
+  }
+
+  .grid-cell:nth-child(1n + 7) {
+    border-bottom: 0;
+  }
+
+  .grid-cell:nth-child(3n + 1) {
+    border-left: 0;
+  }
+
 .app-version {
     position:absolute;
     bottom:0;
     right:0;
     padding-right: 1.5rem;
-}
-
-.util-no-top-border {
-    border-top: 0px;
-}
-
-.util-no-bottom-border {
-    border-bottom: 0px;
-}
-
-.util-no-right-border {
-    border-right: 0px;
-}
-
-.util-no-left-border {
-    border-left: 0px;
 }
